<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="braille_ime_service_name">MS Screen Reader braille keyboard</string>
  <string name="braille_ime_bd_mode_name">Braille display input</string>
  <string name="switch_to_tabletop_announcement">Tabletop mode. Place your device with the charging port to the left.</string>
  <string name="calibration_tip_announcement">To update dot position, hold down %d fingers.</string>
  <string name="bring_ime_settings_page">There is no other keyboard enabled, go to keyboard settings</string>
  <string name="reminder_announcement">Swipe up with 3 fingers for more options</string>
  <string name="switched_to_contracted_announcement">Switched to contracted braille</string>
  <string name="switched_to_uncontracted_announcement">Switched to uncontracted braille</string>
  <string name="braille_ime_displayed_name">braille keyboard</string>
  <string name="multiple_languages_braille_ime_displayed_name">braille keyboard, %s</string>
  <string name="input_view_caption">MS Screen Reader braille keyboard - for help, visit g.co/help/braille</string>
  <string name="perform_action_next">Next</string>
  <string name="perform_action_submitting">Submitting text</string>
  <string name="calibration_step1_hold_left_or_right_finger_announcement">Updating dot position. First, let’s record the dots on your %s.</string>
  <string name="calibration_hold_left_or_right_three_finger_announcement">Touch and hold the screen with the middle 3 fingers of your %s.</string>
  <string name="calibration_hold_left_or_right_four_finger_announcement">Touch and hold the screen with the last 4 fingers of your %s.</string>
  <string name="calibration_finish_announcement">Dot position updated</string>
  <string name="remaining_calibration_finish_announcement">All dot positions updated</string>
  <string name="calibration_step2_hold_left_or_right_finger_announcement">Updated positions for dots 1, 2, and 3. Next, let’s record the dots on your %s.</string>
  <string name="eightDot_braille_calibration_step2_hold_left_or_right_finger_announcement">Updated positions for dots 1, 2, 3, and 7. Next, let’s record the dots on your %s.</string>
  <string name="calibration_fail_announcement">Couldn’t update dot position.</string>
  <string name="calibration_fail_try_again_announcement">Touch and hold the screen with %d fingers. Then try again.</string>
  <string name="left_hand">left hand</string>
  <string name="right_hand">right hand</string>
  <string name="switch_to_language_announcement">Switched to %s</string>
  <string name="braille_keyboard">Braille keyboard</string>
  <string name="set_up_braille_keyboard">Set up braille keyboard</string>
  <string name="how_to_use_braille_keyboard">How to use braille keyboard</string>
  <string name="use_brailleime_pref_dialog_case_ime_enabled">To use the braille keyboard, open your regular keyboard, then tap the choose keyboard icon %1$s (usually in the bottom right corner). Select \"%2$s.\"</string>
  <string name="use_brailleime_pref_dialog_case_ime_disabled_settings">
    1. Tap \"Settings\" below. On the next screen, turn on \"%1$s\"\n\n2. Open your regular keyboard, then tap switch input method %2$s (usually in the bottom right corner).\n\n3. Select \"%1$s.\"
  </string>
  <string name="use_brailleime_pref_dialog_case_ime_enabled_gboard">If you don\’t see an option to switch keyboards, try installing %s, the Google keyboard.</string>
  <string name="use_brailleime_pref_dialog_case_ime_disabled_turn_on">
    1. Turn on braille keyboard below.\n\n2. Open your regular keyboard, then tap switch input method %2$s (usually in the bottom right corner).\n\n3. Select \"%1$s\".
  </string>
  <string name="use_brailleime_pref_dialog_case_ime_disabled_turn_on_gboard">If you can\'t switch keyboards, try installing %s, the Google keyboard.</string>
  <string name="gboard_name" translatable="false">Gboard</string>
  <string name="use_brailleime_pref_button_case_ime_disabled_settings">Settings</string>
  <string name="use_brailleime_pref_button_case_ime_disabled_turn_on">Turn on</string>
  <string name="use_brailleime_pref_button_case_ime_disabled_turn_on_announcement">Turn on braille keyboard</string>
  <string name="review_all_gestures_title">Review all gestures</string>
  <string name="review_and_customize_gestures_title">Gestures</string>
  <string name="preferred_languages_title">Languages</string>
  <string name="preferred_typing_language_title">Preferred typing language</string>
  <string name="preferred_braille_grade_title">Preferred braille grade</string>
  <string name="switch_input_code_gesture_tip_dialog_title">Quickly change language while typing</string>
  <string name="switch_input_code_gesture_tip_dialog_message">To change your language while typing with the braille keyboard, swipe up with 3 fingers. Then select \"switch to next language\".</string>
  <string name="title_pref_accumulate_presses">Include all pressed dots</string>
  <string name="summary_pref_accumulate_presses">Each pressed dot is part of the input, even if the dot is released before other dots</string>
  <string name="title_pref_reverse_dots">Reverse dots</string>
  <string name="summary_pref_reverse_dots">Swap the dot positions, so that dots 1 and 4 trade places, for example</string>
  <string name="bd_preference_braille_contracted">Contracted braille</string>
  <string name="bd_preference_braille_uncontracted">Uncontracted braille</string>
  <string name="context_menu_title">Braille keyboard options</string>
  <string name="context_menu_input_language_selection">Switch to next language: %s</string>
  <string name="context_menu_input_language_selection_summary">Currently using: %s</string>
  <string name="context_menu_switch_contracted_status_selection">Switch to %s braille</string>
  <string name="contracted">contracted</string>
  <string name="uncontracted">uncontracted</string>
  <string name="context_menu_review_gestures_selection">Review gestures</string>
  <string name="context_menu_tutorial_selection">Open tutorial</string>
  <string name="context_menu_tutorial_finish">Finish tutorial</string>
  <string name="context_menu_settings_selection">Settings</string>
  <string name="context_menu_layout_selection">Layout</string>
  <string name="context_menu_layout_calibration">Update dot positions</string>
  <string name="context_menu_close_button">Close</string>
  <string name="bk_gesture_unassigned">Unassigned</string>
  <string name="gesture_direction_left">left</string>
  <string name="gesture_direction_right">right</string>
  <string name="gesture_direction_up">up</string>
  <string name="gesture_direction_down">down</string>
  <string name="gesture_swipe_one_finger">Swipe <xliff:g id="direction">%1$s</xliff:g></string>
  <string name="gesture_swipe_multiple_fingers">Swipe <xliff:g id="direction">%1$s</xliff:g> with <xliff:g id="number">%2$s</xliff:g> fingers</string>
  <string name="gesture_hold_and_swipe_one_finger">Hold <xliff:g id="dot_combo">%1$s</xliff:g>, then swipe <xliff:g id="direction">%2$s</xliff:g> anywhere with another finger</string>
  <string name="gesture_hold_and_swipe_multiple_finger">Hold <xliff:g id="dot_combo">%1$s</xliff:g>, then swipe <xliff:g id="direction">%2$s</xliff:g> anywhere with <xliff:g id="number">%3$s</xliff:g> fingers</string>
  <string name="gesture1_or_gesture2"><xliff:g id="dot_combo1">%1$s</xliff:g> or <xliff:g id="dot_combo2">%2$s</xliff:g></string>
  <string name="review_gesture_format"><xliff:g id="action">%1$s</xliff:g>: <xliff:g id="gesture">%2$s</xliff:g></string>
  <string name="review_gestures_review_all_button">All gestures</string>
  <string name="review_gestures_close_button" translatable="false">@string/context_menu_close_button</string>
  <string name="braille_keyboard_gestures">Braille keyboard gestures</string>
  <string name="braille_keyboard_basic_controls">Basic controls</string>
  <string name="braille_keyboard_basic_controls_summary">Add spaces, delete, hide the keyboard, and more</string>
  <string name="braille_keyboard_cursor_movement">Cursor movement</string>
  <string name="braille_keyboard_cursor_movement_description">You can switch granularity to have your cursor move by character, word, or line. Or control how your cursor moves with a series of gestures that include braille dots.</string>
  <string name="braille_keyboard_cursor_movement_summary">Move by character, word, or line</string>
  <string name="braille_keyboard_text_selection_and_editing">Text selection and editing</string>
  <string name="braille_keyboard_text_selection_and_editing_summary">Select, copy, cut, paste</string>
  <string name="braille_keyboard_spell_check">Proofreading</string>
  <string name="braille_keyboard_spell_check_summary">Check the spelling and grammar within a text box</string>
  <string name="braille_keyboard_spell_check_description">You can use proofreading to check for spelling and grammar suggestions. When you’re typing or editing text, use 3 fingers to swipe left or right until you hear \"Proofread\".</string>
  <string name="braille_keyboard_reset_all">Reset all gestures</string>
  <string name="braille_keyboard_snackbar_reset_all">All gestures have been reset</string>
  <string name="braille_keyboard_snackbar_cancel">Change gesture cancelled</string>
  <string name="braille_keyboard_snackbar_remove">Gesture removed</string>
  <string name="braille_keyboard_snackbar_change">Gesture changed</string>
  <string name="braille_keyboard_snackbar_change_mirrored_gesture">Mirrored gesture changed</string>
  <string name="bk_pref_category_title_character">Character</string>
  <string name="bk_pref_category_title_word">Word</string>
  <string name="bk_pref_category_title_line">Line</string>
  <string name="bk_pref_category_title_place_on_page">Place on page</string>
  <string name="bk_pref_category_title_granularity">Granularity</string>
  <string name="bk_pref_category_title_editing">Editing</string>
  <string name="bk_pref_category_title_typing">Typing</string>
  <string name="bk_pref_category_title_keyboard">Keyboard</string>
  <string name="not_enough_touch_points_dialog_title">Your device doesn’t support braille keyboard</string>
  <string name="not_enough_touch_points_dialog_message">Your device doesn’t support enough touch points. For more information, contact your device manufacturer.</string>
  <string name="not_enough_touch_points_dialog_button" translatable="false">@string/context_menu_close_button</string>
  <string name="talkback_off_dialog_title">Turn on MS Screen Reader to use braille keyboard</string>
  <string name="talkback_off_dialog_positive_button">Turn on in accessibility settings</string>
  <string name="talkback_suspend_dialog_title">Resume MS Screen Reader to use braille keyboard</string>
  <string name="talkback_off_or_suspend_dialog_message">When MS Screen Reader is on, you can tap your screen to enter braille symbols.</string>
  <string name="talkback_off_custom_gestures_dialog_title">Turn on MS Screen Reader to change gesture</string>
  <string name="talkback_off_custom_gestures_dialog_message">MS Screen Reader is off. Turn it on to change braille keyboard gestures.</string>
  <string name="talkback_off_custom_gestures_dialog_positive_button">Go to Settings</string>
  <string name="reset_gestures_dialog_title">Reset all gestures?</string>
  <string name="custom_gestures_dialog_description">current gesture</string>
  <string name="custom_gestures_dialog_share_description">This action uses the same gesture as \"<xliff:g id="action">%s</xliff:g>\". Changing this gesture will change it for both actions.</string>
  <string name="custom_gestures_dialog_change_gesture_button">Change gesture</string>
  <string name="custom_gestures_dialog_reset_to_default_button">Reset to default</string>
  <string name="custom_gestures_dialog_remove_button">Remove gesture</string>
</resources>